# data-scraping

./: .gitignore  LICENSE  README.md  pyproject.toml
gmaps-extractor/: README.md  run.sh  run_semarang.py  test-gmaps.py
gmaps-extractor/data/batas-wilayah-semarang/: semarang.dbf  semarang.shp  semarang.shx
gmaps-extractor/data/result_test/: test_area.json  test_places.csv  test_state.sqlite
gmaps-extractor/data/semarang_full/: area_semarang_res9.json  places_semarang.csv  state_semarang.sqlite
gmaps-extractor/src/: __init__.py  area.py  browser.py  export.py  runner.py  schema.py  scraper.py  state.py
